[package]
name = "json_validator"
version = "0.1.0"
edition = { workspace = true }
description = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
anyhow = "1.0.86"
indus_corpus = { path = "../indus_corpus" }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
