[package]
name = "json_validator"
version = "0.1.0"
edition = { workspace = true }
description = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
keywords = { workspace = true }
categories = { workspace = true }

[dependencies]
anyhow = { workspace = true }
indus_corpus = { path = "../indus_corpus" }
serde = { workspace = true }
serde_json = { workspace = true }
